body scroll bg visibility color fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,7 @@
     display: flex;
     margin: 0px;
     padding: 0px;
+    background-color: var(--body-background-color);
 }
 
 .header {
@@ -26,6 +27,7 @@
     flex-direction: column;
     transition: all 0.5s ease;
     width: 100%;
+    background-color: var(--body-background-color);
 }
 
 .open.content{
@@ -58,10 +60,12 @@
     top: 0px;
     z-index: 11;
     transition: left 0.5s ease, background-color 0.5s ease;
+    display: none;
 }
 
 .open .sidebar {
     left: 0px;
+    display: block;
 }
 
 /* Media query for smaller screens */
