--- a/src/app/content/intro-page/intro-page.component.scss
+++ b/src/app/content/intro-page/intro-page.component.scss
@@ -67,7 +67,6 @@
 }
 
 .icon-container:hover svg {
-    // color: var(--card-color);
     opacity: 1;
     transform: scale(1.1);
 }
@@ -113,6 +112,44 @@
         right: -20%;
     }
     
+}
+
+@media screen and (max-height: 725px) {
+    
+    .icon-container {
+        padding: 5px;
+    }
+
+    .isInView .icon-container {
+        width: 50px;
+        height: 50px;
+        opacity: 1;
+    }
+
+    .icon-container svg {
+        width: 40px;
+        height: 40px;
+    }
+
+}
+
+@media screen and (max-height: 620px) {
+    
+    .icon-container {
+        padding: 5px;
+    }
+
+    .isInView .icon-container {
+        width: 40px;
+        height: 40px;
+        opacity: 1;
+    }
+
+    .icon-container svg {
+        width: 30px;
+        height: 30px;
+    }
+
 }
 
 @keyframes spin {
